Arquivos sem links diretos

--- a/css/energilux.css
+++ b/css/energilux.css
@@ -2396,13 +2396,13 @@ th.name-field.Descricao-HTML {
     width: 100%;
 }
 .colecaoa::before {
-    background-image: url("http://bbbaterias.vteximg.com.br/arquivos/colecaoa.png")
+    background-image: url("/arquivos/colecaoa.png")
 }
 .colecaob::before {
-    background-image: url("http://bbbaterias.vteximg.com.br/arquivos/colecaob.png")
+    background-image: url("/arquivos/colecaob.png")
 }
 .colecaoc::before {
-    background-image: url("http://bbbaterias.vteximg.com.br/arquivos/colecaoc.png")
+    background-image: url("/arquivos/colecaoc.png")
 }
 @media (max-width: 600px) {
     .colecaoa::before,
@@ -3757,7 +3757,7 @@ ul.Marca+.veja-mais {
     top: -10px;
     width: 25px;
     height: 32px;
-    background: url('http://bbbaterias.vteximg.com.br/arquivos/icons-energilux-s7c190d4b23.png') -48px -3605px;
+    background: url('/arquivos/icons-energilux-s7c190d4b23.png') -48px -3605px;
 }
 
 .product-info-container .atendimento-prod {
@@ -7749,7 +7749,7 @@ display: none
 .product-info-container .product-checkout .buy-button:before {
     left: 20px;
     top: 18px;
-    background-image: url('http://bbbaterias.vteximg.com.br/arquivos/icons-energilux-s7c190d4b23.png?v=9996663663&amp;utm_source=9988855225')!important;
+    background-image: url('/arquivos/icons-energilux-s7c190d4b23.png?v=9996663663&amp;utm_source=9988855225')!important;
 	background-position: -3px -355px!important;
 }
 /*.buy-button {
@@ -8584,7 +8584,7 @@ float: left;
 		width: 25px;
 		height: 50px;
 		float: right;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/nv_menu_seta_orange_lado.png) no-repeat center;
+		background: url(/arquivos/nv_menu_seta_orange_lado.png) no-repeat center;
 		-webkit-transition: all 800ms ease-in-out;
 		-moz-transition: all 800ms ease-in-out;
 		-ms-transition: all 800ms ease-in-out;
@@ -8593,7 +8593,7 @@ float: left;
 	}
 
 	.nv_menu li:hover .seta {
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/nv_menu_seta_blue_lado.png) no-repeat center;
+		background: url(/arquivos/nv_menu_seta_blue_lado.png) no-repeat center;
 		-webkit-transition: all 800ms ease-in-out;
 		-moz-transition: all 800ms ease-in-out;
 		-ms-transition: all 800ms ease-in-out;
@@ -8737,7 +8737,7 @@ float: left;
 		padding-bottom: 14px;
 		margin-left: 15px;
 		padding-left: 15px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/nv_menu_seta_orange_lado_pequena.png) no-repeat 0px 5px;
+		background: url(/arquivos/nv_menu_seta_orange_lado_pequena.png) no-repeat 0px 5px;
 		-webkit-transition: all 100ms ease-in-out;
 		-moz-transition: all 100ms ease-in-out;
 		-ms-transition: all 100ms ease-in-out;
@@ -8751,7 +8751,7 @@ float: left;
 	}
 
 	.nv_menu li ul .sub_menu_lista .lista:hover {
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/nv_menu_seta_blue_lado_pequena.png) no-repeat 0px 5px;
+		background: url(/arquivos/nv_menu_seta_blue_lado_pequena.png) no-repeat 0px 5px;
 		-webkit-transition: all 100ms ease-in-out;
 		-moz-transition: all 100ms ease-in-out;
 		-ms-transition: all 100ms ease-in-out;
@@ -8773,56 +8773,56 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -26px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -26px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -326px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -326px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -607px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -607px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -891px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -891px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-5 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1187px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1187px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-6 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1480px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1480px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-7 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1782px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -1782px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-1-8 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-1.jpg) no-repeat -1px -2092px;
+		background: url(/arquivos/img-sub-menu-1.jpg) no-repeat -1px -2092px;
 		display: none;
 	}
 
@@ -8833,49 +8833,49 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -26px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -26px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -326px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -326px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -608px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -608px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -892px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -892px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-5 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1179px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1179px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-2-6 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1471px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1471px;
 		display: none;
 	}
 
     .nv_menu li ul .sub_menu_imagem #img-sm-2-7 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1775px;
+		background: url(/arquivos/img-sub-menu-2.jpg) no-repeat -1px -1775px;
 		display: none;
 	}
 
@@ -8886,28 +8886,28 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-3-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-3.jpg) no-repeat -1px -33px;
+		background: url(/arquivos/img-sub-menu-3.jpg) no-repeat -1px -33px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-3-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-3.jpg) no-repeat -1px -333px;
+		background: url(/arquivos/img-sub-menu-3.jpg) no-repeat -1px -333px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-3-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-3.jpg) no-repeat -1px -630px;
+		background: url(/arquivos/img-sub-menu-3.jpg) no-repeat -1px -630px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-3-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-3.jpg) no-repeat -1px -940px;
+		background: url(/arquivos/img-sub-menu-3.jpg) no-repeat -1px -940px;
 		display: none;
 	}
 
@@ -8918,63 +8918,63 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -31px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -31px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -323px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -323px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -615px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -615px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -907px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -907px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-5 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -1497px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -1497px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-6 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -1792px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -1792px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-7 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2081px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2081px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-8 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2398px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2398px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-4-9 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2724px;
+		background: url(/arquivos/img-sub-menu-4.jpg) no-repeat -1px -2724px;
 		display: none;
 	}
 
@@ -8985,49 +8985,49 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -31px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -31px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -338px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -338px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -653px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -653px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -964px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -964px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-5 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1275px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1275px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-6 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1590px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1590px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-5-7 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1904px;
+		background: url(/arquivos/img-sub-menu-5.jpg) no-repeat -1px -1904px;
 		display: none;
 	}
 
@@ -9038,80 +9038,80 @@ float: left;
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-1 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -31px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -31px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-2 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -320px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -320px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-3 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -612px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -612px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-4 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -910px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -910px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-5 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1213px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1213px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-6 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1517px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1517px;
 		display: none;
 	}
 
 	.nv_menu li ul .sub_menu_imagem #img-sm-6-7 {
 		width: 418px;
 		height: 260px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1817px;
+		background: url(/arquivos/img-sub-menu-6.jpg) no-repeat -1px -1817px;
 		display: none;
 	}
 	
 .nv_menu .sub_menu_imagem_banner_1 {
     width: 420px;
     height: 262px;
-    background: url(http://bbbaterias.vteximg.com.br/arquivos/Imagens-Menu-LAMPADA.jpg);
+    background: url(/arquivos/Imagens-Menu-LAMPADA.jpg);
 }
 
 .nv_menu .sub_menu_imagem_banner_2 {
     width: 420px;
     height: 262px;
-    background: url(http://bbbaterias.vteximg.com.br/arquivos/Imagens-Menu-PLAFON.jpg);
+    background: url(/arquivos/Imagens-Menu-PLAFON.jpg);
 }
 
 .nv_menu .sub_menu_imagem_banner_3 {
     width: 420px;
     height: 262px;
-    background: url(http://bbbaterias.vteximg.com.br/arquivos/Imagens-Menu-SPOT.jpg);
+    background: url(/arquivos/Imagens-Menu-SPOT.jpg);
 }
 
 .nv_menu .sub_menu_imagem_banner_4 {
     width: 420px;
     height: 262px;
-    background: url(http://bbbaterias.vteximg.com.br/arquivos/Imagens-Menu-REFLETOR.jpg);
+    background: url(/arquivos/Imagens-Menu-REFLETOR.jpg);
 }
 
 .nv_menu .sub_menu_imagem_banner_5 {
     width: 420px;
     height: 262px;
-    background: url(http://bbbaterias.vteximg.com.br/arquivos/Imagens-Menu-FITA.jpg);
+    background: url(/arquivos/Imagens-Menu-FITA.jpg);
 }
 
 @media (max-width: 1023px) {
@@ -9130,7 +9130,7 @@ float: left;
 
 }
 
-.page-footer .vendors .list .list-item.bbdi { position: relative; margin: 0 30px 0 0 } .page-footer .vendors .list .list-item.bbdi:before { content: "Uma empresa do"; position: absolute; top: -14px; color: #555; font-size: 10px; font-size: 0.625rem } .page-footer .vendors .list .list-item.bbdi a { display: inline-block; background-repeat: no-repeat; background-image: url("http://bbbaterias.vteximg.com.br/arquivos/mini-logo_grupo-bbdi.png"); background-position: 0 6px; height: 31px; width: 106px }
+.page-footer .vendors .list .list-item.bbdi { position: relative; margin: 0 30px 0 0 } .page-footer .vendors .list .list-item.bbdi:before { content: "Uma empresa do"; position: absolute; top: -14px; color: #555; font-size: 10px; font-size: 0.625rem } .page-footer .vendors .list .list-item.bbdi a { display: inline-block; background-repeat: no-repeat; background-image: url("/arquivos/mini-logo_grupo-bbdi.png"); background-position: 0 6px; height: 31px; width: 106px }
 
 @media (min-width: 1024px) {
 	.header-wrapper .logo-wrapper .logo img {
@@ -9744,7 +9744,7 @@ float: left;
     top: 50%;
     left: 50%;
     margin: -209px 0 0 -411px;
-	background: url(http://bbbaterias.vteximg.com.br/arquivos/bg-power-cadastro-energilux-um.png?v=2);
+	background: url(/arquivos/bg-power-cadastro-energilux-um.png?v=2);
 }
  .moda-power-cadastro .modal-fechar {
     width: 100%;
@@ -9758,7 +9758,7 @@ float: left;
     position: absolute;
     top: 0;
     right: 0;
-    background-image: url(http://bbbaterias.vteximg.com.br/arquivos/modal-desconto-fechar-energilux.jpg);
+    background-image: url(/arquivos/modal-desconto-fechar-energilux.jpg);
     cursor: pointer
 }
  .moda-power-cadastro .modal-fechar span:before {
@@ -9961,7 +9961,7 @@ float: left;
     font-weight: 400
 }
  .moda-power-cadastro.modal-sucesso {
-    background-image: url(http://bbbaterias.vteximg.com.br/arquivos/bg-power-cadastro-energilux-um.png?v=2)
+    background-image: url(/arquivos/bg-power-cadastro-energilux-um.png?v=2)
 }
  .moda-power-cadastro.modal-sucesso .modal-fechar span:before {
     display: none
@@ -10016,7 +10016,7 @@ float: left;
         width: 358px;
         height: 494px;
         margin: -247px 0 0 -179px;
-		background: url(http://bbbaterias.vteximg.com.br/arquivos/bg-power-cadastro-energilux-dois.png?v=2);
+		background: url(/arquivos/bg-power-cadastro-energilux-dois.png?v=2);
     }
      .moda-power-cadastro .modal-texto {
         height: 273px;
@@ -10077,7 +10077,7 @@ float: left;
         line-height: 42px
     }
      .moda-power-cadastro.modal-sucesso {
-        background-image: url(http://bbbaterias.vteximg.com.br/arquivos/bg-power-cadastro-energilux-dois.png?v=2)
+        background-image: url(/arquivos/bg-power-cadastro-energilux-dois.png?v=2)
     }
 }
 #overlay{display:none;width:100%;height:100%;position:fixed;z-index:9999;top:0;left:0;background-color:rgba(0,0,0,0.5)}
